* The `releases` endpoint was renamed to `branches`.
* The `mesh.release.created`, `mesh.release.updated`, `mesh.release.deleted` events have been changed to `mesh.branch.created`, `mesh.branch.updated`, `mesh.branch.deleted`.
* The Java REST Models have been renamed. (e.g.: ReleaseCreateRequest -> BranchCreateRequest)
* I18n messages have been changed accordingly.

icon:plus[] Elasticsearch: The base64 encoded binary document data will no longer be stored in the search index.

icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.

icon:check[] Core: Increased performance for webroot endpoint.

[[v0.21.2]]
== 0.21.2 (13.06.2018)

icon:check[] Elasticsearch: A compatibility issue with Elasticsearch instances which were hosted on Amazon AWS has been fixed. Previously the check for installed ES plugins failed.


[[v0.21.1]]
== 0.21.1 (28.05.2018)

icon:plus[] Elasticsearch: It is now possible to configure https://www.elastic.co/guide/en/elasticsearch/reference/current/mapping.html[custom mappings] for binary fields. Currently only the `mimeType` and `file.content` fields can be mapped. An example for this mapping can be found in the https://getmesh.io/docs/beta/elasticsearch.html#_binary_fields[Gentics Mesh search documentation].

[[v0.21.0]]
== 0.21.0 (27.05.2018)

icon:bullhorn[] Binary Search

[quote]
____
This version of Gentics Mesh introduces the __Binary Search support__.

The https://www.elastic.co/guide/en/elasticsearch/plugins/6.2/ingest-attachment.html[Elasticsearch Ingest Attachment Plugin] will be utilized if possible to process text file uploads (PDF, DOC, DOCX).
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/elasticsearch.html#_binarysearch[Elasticsearch Documentation].
____
