@@ -193,6 +193,20 @@ public class BranchEndpoint extends AbstractProjectEndpoint {
 			crudHandler.handleAssignMicroschemaVersion(ac, uuid);
 		});
 
+		InternalEndpointRoute setLatest = createRoute();
+		setLatest.path("/:branchUuid/latest");
+		setLatest.addUriParameter("branchUuid", "Uuid of the branch", UUIDUtil.randomUUID());
+		setLatest
+				.description("Set the branch with the given uuid as 'latest' branch of the project.");
+		setLatest.method(POST);
+		setLatest.produces(APPLICATION_JSON);
+		setLatest.exampleResponse(OK, versioningExamples.createBranchResponse("Winter Collection Branch"), "Latest branch");
+		setLatest.handler(rc -> {
+			InternalActionContext ac = wrap(rc);
+			String uuid = rc.request().params().get("branchUuid");
+			crudHandler.handleSetLatest(ac, uuid);
+		});
+
 		InternalEndpointRoute updateBranch = createRoute();
 		updateBranch.path("/:branchUuid");
 		updateBranch.addUriParameter("branchUuid", "Uuid of the branch", UUIDUtil.randomUUID());
