@@ -18,6 +18,10 @@ public class BranchCreateRequest implements RestModel {
 	@JsonPropertyDescription("SSL flag of the branch which will be used to generate links across multiple projects.")
 	private Boolean ssl;
 
+	@JsonProperty(required = false, defaultValue = "true")
+	@JsonPropertyDescription("Whether the new branch will be set as 'latest' branch. Defaults to 'true'")
+	private boolean latest = true;
+
 	public BranchCreateRequest() {
 	}
 
@@ -77,6 +81,24 @@ public class BranchCreateRequest implements RestModel {
 	 */
 	public BranchCreateRequest setSsl(Boolean ssl) {
 		this.ssl = ssl;
+		return this;
+	}
+
+	/**
+	 * Return whether the branch shall be made the latest branch.
+	 * @return
+	 */
+	public boolean isLatest() {
+		return latest;
+	}
+
+	/**
+	 * Set whether to make the branch the latest branch
+	 * @param latest
+	 * @return Fluent API
+	 */
+	public BranchCreateRequest setLatest(boolean latest) {
+		this.latest = latest;
 		return this;
 	}
 }
